# snakemake-k8_test

./: .gitignore  README.md  Snakefile  pyproject.toml
default/: config.yaml
