[project]
name = "snakemake8_test"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Jermiah Joseph", email = "jermiahjoseph98@gmail.com"}]
requires-python = ">= 3.11"
dependencies = []


[tool.pixi.project]
channels = ["conda-forge", "bioconda"]
platforms = ["osx-arm64"]


[tool.pixi.tasks]
snake = "snakemake -c1"
# uses the default/config.yaml for CLI arguments
snake-gcp = "snakemake --workflow-profile default"

[tool.pixi.dependencies]
snakemake = ">=9.6.2,<10"
snakemake-storage-plugin-gcs = ">=1.1.4,<2"
snakemake-storage-plugin-http = ">=0.3.0,<0.4"
snakemake-executor-plugin-kubernetes = ">=0.4.2,<0.5"
pdbpp = ">=0.11.6,<0.12"
